feat(backend): add api/items/reset-to-preset
also seed is set to 4-level
